syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GymfitBackendApi";
option java_package = "com.gymfit.backend";

package GymfitBackendApi;

service AuthenticationService {
  rpc SignInAnonymous (SignInAnonymousRequest) returns (SignInAnonymousResponse) {}
}

message SignInAnonymousRequest {}
message SignInAnonymousResponse {}